--- a/Calcolatrice/Index.html
+++ b/Calcolatrice/Index.html
@@ -4,40 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Calcolatrice</title>
 </head>
-<body class="mt-3 ms-3">
-    <div>
-        <input type="text" id="operazioni" disabled="disabled">
+<body class="mt-3 ms-3  me-3">
+    <div class="center">
+        <h1>Calcolatrice</h1>
+    </div>
+    <div class="center">
+        <input class="col-12" type="number" id="operazioni" >
      </div>
-     <div>
-       <div>
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="7" value="7" onclick="func(this.id)" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="8" value="8" onclick="func(this.id)" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="9" value="9" onclick="func(this.id)" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="/" value="/" onclick="func(this.id)" >
+     <div ms-2>
+       <div >
+           <input class="tasto btn btn-secondary" type="button" id="7" value="7" onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" type="button" id="8" value="8" onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" type="button" id="9" value="9" onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" type="button" id="/" value="/" onclick="func(this.id)" >
        </div>
        <div>
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="4" value="4" onclick="func(this.id)" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="5" value="5" onclick="func(this.id)" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="6" value="6" onclick="func(this.id)" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="*" value="X" onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" type="button" id="4" value="4" onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" type="button" id="5" value="5" onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" type="button" id="6" value="6" onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" type="button" id="*" value="X" onclick="func(this.id)" >
        </div>
        <div>
-            <input class="btn btn-light mt-2 ms-2" type="submit" id="1" value="1" onclick="func(this.id)" >
-            <input class="btn btn-light mt-2 ms-2" type="submit" id="2" value="2" onclick="func(this.id)" >
-            <input class="btn btn-light mt-2 ms-2" type="submit" id="3" value="3" onclick="func(this.id)" >
-            <input class="btn btn-light mt-2 ms-2" type="submit" id="-" value="-" onclick="func(this.id)" >
+            <input class="tasto btn btn-secondary" type="button" id="1" value="1" onclick="func(this.id)" >
+            <input class="tasto btn btn-secondary" type="button" id="2" value="2" onclick="func(this.id)" >
+            <input class="tasto btn btn-secondary" type="button" id="3" value="3" onclick="func(this.id)" >
+            <input class="tasto btn btn-secondary" type="button" id="-" value="-" onclick="func(this.id)" >
         </div>
         <div>
-           <input class="btn btn-danger mt-2 ms-2" type="submit" value="C" onclick="cancella()" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="0" value="0" onclick="func(this.id)" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="." value="." onclick="func(this.id)" >
-           <input class="btn btn-light mt-2 ms-2" type="submit" id="+" value="+" onclick="func(this.id)" >
+           <input class="tasto btn btn-danger"   value="C" onclick="cancella()" >
+           <input class="tasto btn btn-secondary" id="0" value="0" onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" id="." value="." onclick="func(this.id)" >
+           <input class="tasto btn btn-secondary" id="+" value="+" onclick="func(this.id)" >
          </div>
          <div>
-              <button class="btn btn-success mt-2 ms-2" value="=" onclick="operazione()">=</button>
+              <button class="res btn btn-success" x value="=" onclick="operazione()">=</button>
           </div>
       </div>
     <!-- <script src="dati.js"></script>
